client-ui/client-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mernspace-client-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, PATCH, GET, POST, OPTIONS, HEAD"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.adityavyas.com"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - pizza.adityavyas.com
    secretName: pizza-tls
  rules:
  - host: pizza.adityavyas.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-ui
              port:
                number: 3000
